[package]
name = "crawler"
version = "0.1.0"
authors = ["rrohrer <ryan.rohrer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rs-nds = {git = "https://github.com/rrohrer/rs-nds.git"}

[lib]
name = "crawler"
crate-type = ["staticlib"]
